2005-11-18  Christopher Faylor  <cgf@timesys.com>

	* include/cygwin/sys_time.h: Rename from include/cygwin/time.h.
	* include/cygwin/time.h: New file.

2005-11-17  Christopher Faylor  <cgf@timesys.com>

	* fork.cc (fork): Move top-of-stack calculation later.

	* pinfo.cc (_pinfo::set_ctty): Use __ctty to print current console in
	debugging output.

2005-11-17  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_tty_slave::open):  Don't expect that
	service applications have no window station attached.

2005-11-16  Christopher Faylor  <cgf@timesys.com>

	* times.cc (hires_ms::prime): Don't escalate the priority.

2005-11-14  Christopher Faylor  <cgf@timesys.com>

	* include/sys/elf64.h: Fix types to reflect linux usage.

2005-11-14  Corinna Vinschen  <corinna@vinschen.de>
	    Christopher Faylor  <cgf@timesys.com>

	* fhandler.h (fhandler_console::fixup_after_fork_exec): Define with
	additional bool parameter.
	(fhandler_console::fixup_after_exec): Accommodate
	fixup_after_fork_exec's parameter.
	(fhandler_console::fixup_after_fork): Ditto.
	* fhandler_console.cc (fhandler_console::fixup_after_fork_exec): Avoid
	opening new console only when close_on_exec AND execing.

2005-11-14  Christopher Faylor  <cgf@timesys.com>

	* fhandler.h (fhandler_console::fixup_after_fork_exec): Declare new function.
	(fhandler_console::fixup_after_fork): Use fixup_after_fork_exec.
	(fhandler_console::fixup_after_exec): Ditto.
	* fhandler_console.cc (fhandler_console::fixup_after_fork): Delete definition.
	(fhandler_console::fixup_after_fork_exec): Rename from fixup_after_exec.
	* pinfo.cc (_pinfo::set_ctty): Don't play with console count here.
	* syscalls.cc (close_all_files): Don't close cygheap ctty if hExeced
	since the child will be copying information from us.
	(setsid): Use myctty() rather than raw ctty #.

2005-11-13  Christopher Faylor  <cgf@timesys.com>

	* cygheap.h (init_cygheap::manage_console_count): Declare new function.